# PyLocalEnsemble

./: .gitignore  Article.md  CLAUDE.md  Dockerfile  Readme.md  Roadmap.md  alice.json  alice.json.example  alice.modelfile  alice.py  alice_install.py  config.py  docker-compose.yml  image.py  install.py  llm.py  personas.example.json  r.ps1  r.sh  requirements-forge-frozen-linux.txt  requirements-forge-frozen.txt  requirements.txt  state.py  stt.py  t.py  tts.py  utils.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
conf/: alice.example.json  personas.example.json
core/: Cargo.toml
core/bindings/android/: Cargo.toml  build.gradle.kts
core/bindings/android/.cargo/: config.toml
core/bindings/android/src/: jni_bridge.rs  lib.rs
core/bindings/python/: Cargo.toml
core/bindings/python/src/: lib.rs
core/src/: lib.rs  logging.rs
core/src/image/: mod.rs
core/src/llm/: engine.rs
core/src/stt/: mod.rs
core/src/tts/: chunker.rs  engine.rs  mod.rs
image/: __init__.py  forge.py  generate.py  prompt.py
installer/: forge_install.py  llama.py  packages.py  tts_install.py
personas/packs/: default.json  philosophers.json  senate.json
routes/: audio.py  chat.py  image_api.py  persona.py  system.py
server/: alice.py  config.py  llm.py  logging_setup.py  state.py  stt.py  tts.py  utils.py  vram.py
server/conf/: alice.example.json  personas.example.json
static/: app.js  index.html  style.css
tests/: test_api.py  test_audio.py  test_config.py  test_install.py  test_llm.py  test_prompt.py  test_state.py  test_tts.py
(+55 files in other folders)
